--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.4",
     "js-sha256": "^0.9.0",
     "mocha": "^6.0.2",
-    "request": "^2.88.0",
+    "node-fetch": "^2.6.0",
     "underscore": "^1.9.1"
   }
 }
